[package]
name = "qemu-manager-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
teloxide = { version = "0.12", features = ["macros"] }
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
